data/all_generated_tests/raw_wast_tests/br_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1356.wast
;; 7. **Test Description:**    - **Test Name:** Return with Branch to Export Function Test    - **Objective:** Verify correct execution of `br` instruction while returning from an import and immediately branching in an export function.    - **Constraint:** Tests transition and operand stack management during combined import/export operations with branches.    - **Relation to Incorrect Handling:** Ensures smooth control flow transitions and operations across function exportation boundaries.

(assert_invalid
  (module
    (func $exportedFunc (export "exportedFunc")
      (param i32)
      (block (result i32)
        (return (br 0))
      )
    )
    (func (import "" "importedFunc") (param i32) (result i32))
  )
  "type mismatch"
)